--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "axios": "^1.13.5",
     "framer-motion": "^12.24.12",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
